tests/invalids/call.gt
proc main ()
    int m;
begin
    call f (m := n);
end
